# DeltaosVerCtrl

./: CMakeLists.txt  applyPatch.c  base64.c  checkIntegrity.c  config.h  date.c  dbInfo.c  dbOpt.c  fileChecksum.c  main.c  makeBaseDB.c  makePatchDB.c  md5.c  stringProcess.c
